--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -13,7 +13,7 @@
   },
   "about_me":{
     "about_me": "About Me",
-    "des": "林承翰目前就讀於國立交通大學資訊管理與財務金融學系資訊管理研究所，研究興趣含括資料安全、影像處理、數位浮水印、資料挖掘與推薦系統等議題。過去曾於ACM-NCPU競賽獲得佳作，亦於國際研討會發表數篇資訊安全相關議題論文。也擔任國立苑裡高中、靜宜大學資訊相關課程、活動的講師，於資訊扎根的議題努力不懈。"
+    "des": "林承翰目前就讀於國立交通大學資訊管理與財務金融學系資訊管理研究所，研究興趣含括資料安全、影像處理、數位浮水印、資料挖掘、群眾運算與推薦系統等議題。曾榮獲全國大專優秀青年、斐陶斐榮譽會員等獎項。並於ACM-NCPU、ICPC等國內外競賽榮獲佳績，學術研究方面亦於國際研討會發表數篇資料安全、數位浮水印等相關議題論文。過去也擔任國立苑裡高中、靜宜大學資訊相關課程和活動的講師。"
   },
   "skills":{
     "my_skills": "My Skills"
